<resources>
    <string name="app_name">Look Application</string>
    <string name="ticker_text">LS running</string>
    <string name="notification_title">LS running (title)</string>
    <string name="notification_message">LS running (message)</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_sensors">Show Sensors</string>
    <string name="title_activity_show_wi_fi">Show WiFi</string>

    <string name="show">Show</string>
    <string name="showsensorsbutton">Show sensors list</string>

    <string name="sensorstext">Sensors :</string>
    <string name="wifistext">WiFi :</string>

    <string name="textserviceparameter">Service parameters : %1$d min(%2$d sec)</string>
    <string name="textrestminutes">running (rest %1$d min)</string>
    <string name="textGEOparameter"> (lo,la)= %1$s</string>

    <string name="textshowwifilistOK">Show WiFi</string>
    <string name="textshowwifilistNOT">WiFi is stopped</string>
    <string name="textstartlookservice">Start look service</string>
    <string name="textstoplookservice">Stop look service (rest %1$s min)</string>
    <string name="textlookservicebutton">Look service</string>

    <string name="textshowDB">Show DB state</string>
    <string name="count_DB_records">Records count :</string>
    <string name="count_BSSID_records">SSID count :</string>
    <string name="count_BSSID_PreLast">SSID count (prelast) :</string>
    <string name="count_BSSID_Last">SSID count (current) :</string>

    <string name="textEraseDB">Erase DB records</string>

    <string name="title_activity_setting">Setting</string>

    <string name="pref_lookservice_title">Service options</string>
    <string name="pref_lookservice_key">Service key</string>

    <string name="pref_beep">Service beep</string>
    <string name="pref_beep_summary">Start/Stop activity service beep</string>

    <string name="pref_foreground">Run foreground</string>
    <string name="pref_foreground_summary">Run foreground</string>

    <string name="pref_delayS">5</string>
    <string name="pref_delayS_dialogtitle">Insert delay time between query (from 3 to 300 sec)</string>
    <string name="pref_delayS_title">Delay time</string>
    <string name="pref_delayS_summary">Delay time between query (second)</string>

    <string name="pref_timeM">60</string>
    <string name="pref_timeM_dialogtitle">Insert working time (from 2 to 600 min)</string>
    <string name="pref_timeM_title">Working time</string>
    <string name="pref_timeM_summary">Working service time (minutes)</string>

    <string name="pref_communication_title">Communication</string>
    <string name="pref_communication_key">Communication key</string>

    <string name="pref_wifi_title">WiFi setting</string>
    <string name="pref_wifi_summary">WiFi setting summary</string>
    <string name="pref_wifi_request_scanning_title">WiFi Scanning</string>
    <string name="pref_wifi_request_scanning_summary">WiFi Scanning summary</string>
    <string name="pref_location_title">Location (GPS, GLONASS ...)</string>
    <string name="pref_location_summary">Location summary</string>
    <string name="pref_location_use_title">Using location</string>
    <string name="pref_location_use_summary">Using location (GPS, GLONASS ...)</string>
    <string name="pref_old_location_use">60</string>
    <string name="pref_old_location_use_time_title">After this time (minutes) old location don\'t use</string>
    <string name="pref_old_location_use_time_summary">After this time (minutes) old location don\'t use</string>

    <string name="pref_storage_title">Storage</string>
    <string name="pref_storage_key">Storage key</string>

    <string name="pref_protocol_title">Enable protocol</string>
    <string name="pref_protocol_summary">Enable protocol</string>
    <string name="pref_protocol_append_title">Enable protocol append</string>
    <string name="pref_protocol_append_summary">Enable protocol append</string>

    <string name="pref_nmea_protocol_title">Enable protocol NMEA</string>
    <string name="pref_nmea_protocol_summary">Enable protocol NMEA</string>
    <string name="pref_nmea_protocol_append_title">Enable protocol NMEA append</string>
    <string name="pref_nmea_protocol_append_summary">Enable protocol NMEA append</string>

    <string name="pref_erase_title">Enable erase DB?</string>
    <string name="pref_erase_summary">Enable erase DB</string>
    <string name="pref_erase_second_confirm_title">Confirm enable erase DB</string>
    <string name="pref_erase_second_confirm_summary">Confirm enable erase DB (second confirm)</string>

    <string name="pref_special_title">Special</string>
    <string name="pref_special_key">Special key</string>
    <string name="title_activity_show_db">ShowDB</string>
    <string name="title_activity_show_sensors_values">ShowSensorsValues</string>

</resources>
