<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_lookservice_title"
        android:key="@string/pref_lookservice_key">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_beep"
        android:title="@string/pref_beep"
        android:summary="@string/pref_beep_summary"
        />

    <EditTextPreference
        android:defaultValue="5"
        android:dialogTitle="@string/pref_delayS_dialogtitle"
        android:key="@string/pref_delayS"
        android:summary="@string/pref_delayS_summary"
        android:title="@string/pref_delayS_title" />

    <EditTextPreference
        android:defaultValue="60"
        android:dialogTitle="@string/pref_waitM_dialogtitle"
        android:key="@string/pref_waitM"
        android:summary="@string/pref_waitM_summary"
        android:title="@string/pref_waitM_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_storage_title"
        android:key="@string/pref_storage_key">
    </PreferenceCategory>

</PreferenceScreen>