<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LookActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensors"
        android:text="@string/sensorstext"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"

        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensorscount"
        android:text="-1"
        android:layout_alignBaseline="@+id/sensors"
        android:layout_toRightOf="@+id/sensors"
        android:layout_toEndOf="@+id/sensors" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:clickable="true"
        android:enabled="true"
        android:id="@+id/showsensorslist"
        android:longClickable="false"
        android:nestedScrollingEnabled="false"
        android:onClick="ClickShowSensorsList"
        android:text="@string/showsensorsbutton"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignBaseline="@+id/sensors"
        android:layout_alignRight="@+id/showwifilist"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wifis"
        android:text="@string/wifistext"
        android:layout_below="@+id/showsensorslist"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold|italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wifiscount"
        android:text="-2"
        android:layout_alignBaseline="@+id/wifis"
        android:layout_below="@+id/showsensorslist"
        android:layout_toRightOf="@+id/wifis"
        android:layout_toEndOf="@+id/wifis" />
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:clickable="true"
        android:enabled="true"
        android:id="@+id/showwifilist"
        android:longClickable="false"
        android:nestedScrollingEnabled="false"
        android:onClick="ClickShowWiFiList"
        android:text="@string/textshowwifilistOK"
        android:visibility="visible"
        android:layout_alignBaseline="@+id/wifis"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:id="@+id/startlookservice"
        android:longClickable="false"
        android:nestedScrollingEnabled="false"
        android:onClick="ClickStartLookService"
        android:text="@string/textstartlookservice"
        android:visibility="visible"
        android:layout_below="@+id/showwifilist"
        android:layout_toRightOf="@+id/wifis"
        android:layout_toEndOf="@+id/wifis"
        android:layout_marginTop="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:clickable="true"
        android:enabled="true"
        android:id="@+id/stoplookservice"
        android:longClickable="false"
        android:nestedScrollingEnabled="false"
        android:onClick="ClickStopLookService"
        android:text="@string/textstoplookservice"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simpletextmessage"
        android:layout_above="@+id/stoplookservice"/>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:layout_above="@+id/simpletextmessage"/>

</RelativeLayout>
